# hatch_generator

./: .gitignore  CMakeLists.txt  Doxyfile  SVGDocument.cpp  SVGDocument.cxx  SVGDocument.ixx  hatching.cpp  hatching.cxx  hatching.ixx  main.cpp
includes/: SVGDocument.h  hatching.h
src/: hatching.cpp  main.cpp
